fix: fixed fonts, everything grows on mobile according to width.

--- a/oz-nadlan/index.css
+++ b/oz-nadlan/index.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: "OEMeodedPashutCondencedPro-Light";
-  src: url("./assets/fonts/OEMeodedPashutCondencedPro-Light.otf") format("opentype");
+  font-family: "mainFont";
+  src: url("/assets/Fonts/OEMeodedPashutCondencedPro-Light.otf") format("opentype");
 }
 body,
 html {
@@ -8,7 +8,7 @@ html {
   margin: 0;
   padding: 0;
   direction: rtl;
-  font-family: "OEMeodedPashutCondencedPro-Light";
+  font-family: "mainFont";
 }
 
 body {
@@ -18,7 +18,7 @@ body {
 }
 
 .oz-nadlan {
-  width: 100vw;
+  /* width: 100vw; */
   overflow-x: hidden;
 }
 .oz-nadlan .mobile {
@@ -38,19 +38,21 @@ body {
   height: auto;
 }
 .oz-nadlan .mobile .houses__image {
-  height: 16rem;
+	height: 0;
+	width: 100%;
+	padding-top: 66.7%;
   background-size: cover;
 }
 .oz-nadlan .mobile .houses__text {
   text-align: center;
 }
 .oz-nadlan .mobile .houses__text--title {
-  font-size: 4.5rem;
+  font-size: 21vw;
   line-height: 1;
   padding-bottom: 1rem;
 }
 .oz-nadlan .mobile .houses__text--details {
-  font-size: 1.6rem;
+  font-size: 6vw;
   line-height: 1.2;
   padding-bottom: 2rem;
 }
@@ -62,7 +64,7 @@ body {
   padding: 0 0.3rem;
 }
 .oz-nadlan .mobile .houses .garden {
-  background-color: #a9d9b1;
+  background-color: #ABD8B0;
   margin-bottom: 5rem;
 }
 .oz-nadlan .mobile .houses .garden__image {
@@ -79,22 +81,25 @@ body {
   padding: 0 1rem;
   color: #ffffff;
 }
+.oz-nadlan .mobile .footer__form--fill {
+	font-size: 6vw;
+}
 .oz-nadlan .mobile .footer__disclaimer {
   padding: 1rem;
-  font-size: 1.6rem;
+  font-size: 6vw;
   line-height: 1.2;
 }
 .oz-nadlan .mobile .footer__logo {
   padding: 1rem;
 }
 .oz-nadlan .mobile .footer__logo img {
-  width: 7rem;
+  width: 20vw;
   height: auto;
 }
 .oz-nadlan .mobile .footer__call img {
-  width: 4rem;
+  width: 13vw;
   height: auto;
-  padding: 1rem;
+  padding: 0.5rem;
 }
 
 .crm-form {
@@ -112,7 +117,9 @@ body {
   text-decoration: none;
   text-align: center;
   cursor: pointer;
-  width: 100%;
+	width: 90%;
+	margin: auto;
+	margin-bottom: 0;
   display: block;
   color: #5d696d;
   font-size: 1rem;
@@ -128,7 +135,8 @@ body {
   color: black;
   height: 2.2rem;
   display: block;
-  width: 100%;
+	width: 90%;
+	margin: auto;
   font-size: 1.1rem;
   outline: none;
   margin-bottom: 0.6rem;
@@ -139,7 +147,7 @@ body {
   padding-right: 1rem;
 }
 .crm-form__project-link {
-  margin-top: 1.7rem;
+	margin-top: 1.7rem !important;
 }
 
 .show-mobile {
